prevent form labels from wrapping

--- a/app/assets/stylesheets/_module.scss
+++ b/app/assets/stylesheets/_module.scss
@@ -224,6 +224,7 @@
 .m-form__label {
   cursor: pointer;
   display: block;
+  white-space: nowrap;
 }
 
 .m-form__label--inline {
